--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "bootstrap": "^3.3.6",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.3",
-    "rxjs": "5.0.0-beta.12",
+    "rxjs": "^5.0.0-beta.12",
     "systemjs": "0.19.27",
     "zone.js": "^0.6.23"
   },
