--- a/package.json
+++ b/package.json
@@ -43,5 +43,9 @@
     "Gulp"
   ],
   "author": "Vladimir Pavkovic",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/vladimirpavk/Angular2-Auth0-NodeJS-Private-and-Public-routes.git"
+  }
 }
