--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
+    "angular2-jwt": "^0.1.28",
     "browser-sync": "^2.16.0",
     "express": "^4.14.0",
     "gulp": "^3.9.1",
