--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-nodemon": "^2.1.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
+    "jquery": "^3.1.1",
     "path": "^0.12.7",
     "typescript": "^2.0.2",
     "typings": "^1.3.2"
