--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^2.13.6",
     "jquery": "^3.1.1",
+    "jsonfile": "^2.4.0",
     "path": "^0.12.7",
     "typescript": "^2.0.2",
     "typings": "^1.3.2"
